--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="container_content_inner">
                 <div class="title">
                     <p> Hi, I'm</p>
-                    <h1>Chiara BoisAubin</h1>
-                    <p  style="margin-bottom: 1em; font-size: 24px;"> (chee-r-ah bruh-zu-ben) </p>
+                    <h1>Chiara B.</h1>
+                    <p  style="margin-bottom: 1em; font-size: 24px;"> (chee-r-ah) </p>
                 </div>
                 <div class="par">
                     <p>
