--- a/pages/projects.html
+++ b/pages/projects.html
@@ -82,7 +82,7 @@
    
                     <div class="content-grid-text">
                 
-                        <h2>Exploring ways to improve <br> filtering when shopping </h2>
+                        <h2> Filtering information when shopping </h2>
     
                   <!-- <h3>CVS</h3>  -->  
                         <ul>
