--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title> Exploring ways to improve filtering when shopping </title>
+    <title> Filtering information when shopping </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Chiara's portfolio" />
     <meta property="og:image" content="https://i.ibb.co/jvCMrjG/Thumnail-for-site.png" />
-    <meta property="og:description" content="Exploring ways to improve filtering when shopping " />
+    <meta property="og:description" content="Filtering information when shopping " />
     <meta property="og:url" content="https://chiaraboisaubin.com/" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
@@ -27,7 +27,7 @@
     <!-- nav -->
     <div class="content-container-project">
         <header class="header-project">
-            <h1> Exploring ways to improve filtering when shopping </h1>
+            <h1> Filtering information when shopping </h1>
         </header>
 
 
