--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
 
     <meta property="og:title" content="Chiara's portfolio" />
-    <meta property="og:image" content="https://i.ibb.co/jvCMrjG/Thumnail-for-site.png" />
+    <meta property="og:image" content="https://i.ibb.co/rfBwZKF/fiver-thumbnail-7.png"/>
     <meta property="og:description" content=" Membership dashboard redesign" />
-    <meta property="og:url" content="https://chiaraboisaubin.com/" />
+    <meta property="og:url" content="https://chiaraboisaubin.com/carepass-dashboard.html" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
