--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -5,9 +5,9 @@
     <title> Making a tattoo appointment </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content=" Making a tattoo appointment"/>
-    <meta property="og:image" content="https://i.ibb.co/YLpj3jc/Ink-Tank-into.png"/>
+    <meta property="og:image" content="https://i.ibb.co/YLpj3jc/Ink-Tank-into.png/>
     <meta property="og:description" content=" Making a tattoo appointment"/>
-    <meta property="og:url" content="https://chiaraboisaubin.com/"/>
+    <meta property="og:url" content="https://chiaraboisaubin.com/ink-tank.html"/>
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627"/>
     <meta property="og:type" content="website"/> 
