--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Personalizing reviews for beauty products to better assist shoppers" />
-    <meta property="og:image" content="https://i.ibb.co/N2MmRyp/fiver-thumbnail-4.png" />
+    <meta property="og:image" content="https://i.ibb.co/r3gpDGn/Slide-16-9-1.png" />
     <meta property="og:description" content=" Personalizing reviews for beauty products to better assist shoppers />
-    <meta property="og:url" content="https://chiaraboisaubin.com/" />
+    <meta property="og:url" content="https://chiaraboisaubin.com/reviews-for-beauty-design.html" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
