changed the thumbnail name

--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -4,7 +4,7 @@
 <head>
     <title> Making a tattoo appointment </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content=" Making a tattoo appointment"/>
+    <meta property="og:title" content=" Chiara's portfolio"/>
     <meta property="og:image" content="https://i.ibb.co/YLpj3jc/Ink-Tank-into.png/>
     <meta property="og:description" content=" Making a tattoo appointment"/>
     <meta property="og:url" content="https://chiaraboisaubin.com/ink-tank.html"/>
