--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Personalizing reviews for beauty products to better assist shoppers" />
+    <meta property="og:title" content="Chiara's portfolio" />
     <meta property="og:image" content="https://i.ibb.co/r3gpDGn/Slide-16-9-1.png" />
     <meta property="og:description" content=" Personalizing reviews for beauty products to better assist shoppers />
     <meta property="og:url" content="https://chiaraboisaubin.com/reviews-for-beauty-design.html" />
