--- a/pages/about.html
+++ b/pages/about.html
@@ -186,10 +186,17 @@
                     <li> Storyboarding </li>
                     <li> UX Workshops </li>
                     <li> E-commerce</li>
+                    <li> Healthcare </li>
 
                 </ul>
         </div>
-    </div>
+        <h2 class="large-text">  I also mentor </h2> 
+    
+            <section style="padding: 1rem; width: 100%; max-width: 500px; min-height: 350px;"><img alt="Impact swag image" class="" src="https://adplist-users-production.s3.us-east-1.amazonaws.com/e1d2677dc834087b5d48378a4ed5e344/swags/e33a740c-c2ad-54aa-b09f-47eb561dc59f.webp" height="100%" width="100%" style="background-color: rgb(225, 49, 108); border-radius: 14px;"></section>
+
+        <h3> Reviews </h3>
+        <section style="height: auto; box-shadow: rgba(142, 151, 158, 0.15) 0px 4px 19px 0px; border-radius: 16px; overflow: hidden; width: 100%; max-width: 650px;"><iframe src="https://adplist.org/widgets/reviews?src=chiara-boisaubin" title="All Reviews" width="100%" height="100%" loading="lazy" style="border: 0px;"></iframe></section>
+    </div> 
   <div class="background-color-one">
         <div class="about-container">
         <div class="personal">
