--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -8,7 +8,7 @@
 
     <meta property="og:title" content="Chiara's portfolio" />
     <meta property="og:image" content="https://i.ibb.co/r3gpDGn/Slide-16-9-1.png" />
-    <meta property="og:description" content=" Personalizing reviews for beauty products to better assist shoppers />
+    <meta property="og:description" content=" Personalizing reviews for beauty products to better assist shoppers" />
     <meta property="og:url" content="https://chiaraboisaubin.com/reviews-for-beauty-design.html" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
