--- a/pages/about.html
+++ b/pages/about.html
@@ -52,27 +52,20 @@
             <div class="about-container-text">
                 <p> Hiya, my name is Chiara <i> (chee-r-ah) </i> , I also go by Chi <i> (chee) </i>. My pronouns are
                     she/her/they/them.
-                    I am a UX/UI Designer, Product Designer, Digital Graphic Designer, Front End Developer, and
-                    Researcher.
                 </p>
-                <p> I have been designing, researching, planner, and developing for users for over eight years,
-                    and I enjoy working on making tech sync with people's lives. </p>
                 <p>
                     I admire human behavior when it comes to their interaction with technology.
                     Learning from people's experiences and making solutions drives me to design intuitive user
                     experiences while being authentic and creative and finding methods to make technology inclusive and
                     accessible for people by thinking this throughout the design process.
                 </p>
+
                 <p>
                     I use my front-end development and digital design background to inform my views on improving
                     accessibility issues with designs and development. I enjoy building wireframes and prototypes,
                     conducting usability testing, and architecting user flows .
                 </p>
-                <p>
-                    When I work, I think about the people first and how we can make their lives flexible and
-                    straightforward.
-                    I value collaboration and inclusion and bring a user-focused growth mindset daily.
-                </p>
+    
             </div>
             <div>
                 <img class="chiara-pic" src="https://i.postimg.cc/KcBpCy33/chi2-sq.jpg" alt="chi2-sq" border="0">
@@ -108,7 +101,7 @@
         <div class="space-between">
             <div class="dp-box">
                 <h3> Understand </h3>
-                <img src="https://i.postimg.cc/Qxq4xkbX/Discovery.png" alt="Discovery" border="0"
+                <img src="https://i.ibb.co/gL98t7Dj/Discovery-t.png" alt="Discovery" border="0"
                     style="width: 150px; height: auto;">
                 <p> Gathering as much information about what users value and their experience with a platform or
                     product as well business goals. </p>
@@ -116,7 +109,7 @@
 
             <div class="dp-box">
                 <h3> Explore </h3>
-                <img src="https://i.postimg.cc/rmWg6Ss2/Ideate.png" alt="Ideate" border="0"
+                <img src="https://i.ibb.co/rRW8Hkg7/ideate-icon.png" alt="Ideate" border="0"
                     style="width: 150px; height: auto;">
                 <p> With the data and information gathered, start thinking about how to make the experience while
                     thinking or ways people consume information. </p>
@@ -124,7 +117,7 @@
             
             <div class="dp-box">
                 <h3> Testing </h3>
-                <img src="https://i.postimg.cc/TwTTzc2Z/Testing.png" alt="Testing" border="0"
+                <img src="https://i.ibb.co/sJb2vHdD/Testing.png" alt="Testing" border="0"
                     style="width: 150px; height: auto;">
                 <p> I will <b> always </b> advocate testing! Gathering information as soon as possible helps see issues
                     and assist with designing solutions. </p>
@@ -132,7 +125,7 @@
 
             <div class="dp-box">
                 <h3> Materialize </h3>
-                <img src="https://i.postimg.cc/wM8f3wZB/Development.png" alt="Development" border="0"
+                <img src="https://i.ibb.co/KcD55csd/Development.png" alt="Development" border="0"
                     style="width: 150px; height: auto;">
                 <p> I enjoy assisting in identifying containers and components and HTML structure; this is where my
                     development background comes out and helps conversations with development. </p>
@@ -140,7 +133,7 @@
 
             <div class="dp-box">
                 <h3> Analyze </h3>
-                <img src="https://i.postimg.cc/GpfSnLjG/Analyze.png" alt="Analyze" border="0"
+                <img src="https://i.ibb.co/s9G4zRxq/analye-t.png" alt="Analyze" border="0"
                     style="width: 150px; height: auto;">
                 <p> Gathering user data to improve and update solutions and automated testing." The original sentence is
                     redundant and repetitively phrasing the same idea multiple times. </p>
@@ -204,7 +197,7 @@
 
             <div class="space-between">
                 <div class="personal-container">
-                    <img src="https://i.ibb.co/N61WQ0j/cooking-icon.png" alt="" border="0">
+                    <img src="/Users/chi/Documents/GitHub/portfolio/svg/ph_cooking-pot-fill.svg" alt="" border="0">
                     <p> Cooking </p>
                 </div>
 <!--
@@ -216,14 +209,13 @@
                  -->
 
                 <div class="personal-container">
-                    <img src="https://i.ibb.co/H7c9J6G/pac-person-icon.png" alt="" border="0">
+                    <img src="//svg/Mask_group.svg" alt="" border="0">
                     <img>
                     <p> Gaming </p>
                 </div>
 
                 <div class="personal-container">
-
-                    <img src="https://i.ibb.co/w0KRrHs/motorcyle-icon.png" alt="" border="0">
+<img src="/Users/chi/Documents/GitHub/portfolio/svg/fa6-solid_motorcycle.svg">
                     <p> Riding Motorcyles </p>
                 </div>
 
