removed svg for now

--- a/pages/about.html
+++ b/pages/about.html
@@ -197,7 +197,7 @@
 
             <div class="space-between">
                 <div class="personal-container">
-                    <img src="/Users/chi/Documents/GitHub/portfolio/svg/ph_cooking-pot-fill.svg" alt="" border="0">
+                    <img src="https://i.ibb.co/N61WQ0j/cooking-icon.png" alt="" border="0">
                     <p> Cooking </p>
                 </div>
 <!--
@@ -209,13 +209,14 @@
                  -->
 
                 <div class="personal-container">
-                    <img src="//svg/Mask_group.svg" alt="" border="0">
+                    <img src="https://i.ibb.co/H7c9J6G/pac-person-icon.png" alt="" border="0">
                     <img>
                     <p> Gaming </p>
                 </div>
 
                 <div class="personal-container">
-<img src="/Users/chi/Documents/GitHub/portfolio/svg/fa6-solid_motorcycle.svg">
+
+                    <img src="https://i.ibb.co/w0KRrHs/motorcyle-icon.png" alt="" border="0">
                     <p> Riding Motorcyles </p>
                 </div>
 
