wrapping instead of space between

--- a/pages/about.html
+++ b/pages/about.html
@@ -98,7 +98,7 @@
     <div class="dp-containter about-container">
 
         <h2 class="large-text" id="about"> My design process </h2>
-        <div class="space-between">
+        <div class="wrap">
             <div class="dp-box">
                 <h3> Understand </h3>
                 <img src="https://i.ibb.co/gL98t7Dj/Discovery-t.png" alt="Discovery" border="0"
