--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
                     <p  style="margin-bottom: 1em; font-size: 24px;"> (chee-r-ah) </p>
                 </div>
                 <div class="par">
-                    <p>
-                        An UX / UI Designer who advocates for all kinds of people.
-                    </p>
+                    <p>   An <br> <span class="sub-title">UX / UI / Product Designer  </span> <br>
+                     who advocates for experience for people.</p>
                 </div>
 
                 <div class="btns"></div>
