--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -32,7 +32,7 @@
 
         <nav class="nav-link fixed-nav header" id="NavBar">
             <div class="flex"> 
-            <h1> Chiara BoisAubin</h1>
+ <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
         
             <ul class="link btns_more">
                 <li><a href="projects.html"> All projects </a>\</li>
