--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,7 @@
 
     <header class="nav-link fixed-nav header" id="NavBar">
         <div class="flex">
-            <h1> Chiara BoisAubin</h1>
+ <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
             <ul class="link btns_more">
 
                 <li><a href="about.html">About Chiara </a>\</li>
