--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="par">
                     <p>   An <br> <span class="sub-title">UX / UI / Product Designer  </span> <br>
-                     who advocates for a human-centered experience.</p>
+                    committed to intuitive, people-first solutions.</p>
                 </div>
 
                 <div class="btns"></div>
