--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
            <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
 
             <ul class="link btns_more">
-                <li><a href="projects.html"> All projects </a>\</li>
+                   <li><a href="..//index.html#projects"> All projects</a>\</li>
                 <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=drive_link"> Resume
                     </a>></li>
             </ul>
@@ -101,40 +101,35 @@
         <div class="wrap">
             <div class="dp-box">
                 <h3> Understand </h3>
-                <img src="https://i.ibb.co/gL98t7Dj/Discovery-t.png" alt="Discovery" border="0"
-                    style="width: 150px; height: auto;">
+                <img src="https://i.ibb.co/gL98t7Dj/Discovery-t.png" alt="Discovery" border="0">
                 <p> Gathering as much information about what users value and their experience with a platform or
                     product as well business goals. </p>
             </div>
 
             <div class="dp-box">
                 <h3> Explore </h3>
-                <img src="https://i.ibb.co/rRW8Hkg7/ideate-icon.png" alt="Ideate" border="0"
-                    style="width: 150px; height: auto;">
+                <img src="https://i.ibb.co/rRW8Hkg7/ideate-icon.png" alt="Ideate" border="0">
                 <p> With the data and information gathered, start thinking about how to make the experience while
                     thinking or ways people consume information. </p>
             </div>    
             
             <div class="dp-box">
                 <h3> Testing </h3>
-                <img src="https://i.ibb.co/sJb2vHdD/Testing.png" alt="Testing" border="0"
-                    style="width: 150px; height: auto;">
+                <img src="https://i.ibb.co/sJb2vHdD/Testing.png" alt="Testing" border="0">
                 <p> I will <b> always </b> advocate testing! Gathering information as soon as possible helps see issues
                     and assist with designing solutions. </p>
             </div>
 
             <div class="dp-box">
                 <h3> Materialize </h3>
-                <img src="https://i.ibb.co/KcD55csd/Development.png" alt="Development" border="0"
-                    style="width: 150px; height: auto;">
+                <img src="https://i.ibb.co/KcD55csd/Development.png" alt="Development" border="0">
                 <p> I enjoy assisting in identifying containers and components and HTML structure; this is where my
                     development background comes out and helps conversations with development. </p>
             </div>
 
             <div class="dp-box">
                 <h3> Analyze </h3>
-                <img src="https://i.ibb.co/s9G4zRxq/analye-t.png" alt="Analyze" border="0"
-                    style="width: 150px; height: auto;">
+                <img src="https://i.ibb.co/s9G4zRxq/analye-t.png" alt="Analyze" border="0">
                 <p> Gathering user data to improve and update solutions and automated testing." The original sentence is
                     redundant and repetitively phrasing the same idea multiple times. </p>
             </div>
