--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -32,12 +32,14 @@
 
             <h1> Membership dashboard redesign </h1>
         </header>
-        <nav class="nav-link fixed-nav header" id="NavBar">
+
+            <nav class="nav-link fixed-nav header" id="NavBar">
             <div class="flex">
- <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
+                <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
 
                 <ul class="link btns_more">
-                    <li><a href="projects.html"> All projects </a>\</li> 
+                <ul class="link btns_more">
+               <li><a href="..//index.html#projects"> All projects</a>\</li>
                  <li> <a href="ink-tank.html"> Making a tattoo appointment</a> \</li>  
                  <li> <a href="about.html"> About Chiara </a> </li>   
                 </ul>
@@ -69,9 +71,11 @@
         <!-- Information about the project -->
 
 
-        <div class="background-color">
+     <div class="background-color">
+
+            <!-- Intro about project -->
             <div class="context">
-                <div class="">
+                <div class="context-text">
                 <h2 class="large-text">Context</h2>
                     <p class="para-img"> People like feeling important, so we have VIP sections or special events where
                         you must wait hours online or in line for a ticket. Having a membership is a way for people to
