--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -17,30 +17,29 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
         alt="cute-icon-thumbnail" border="0">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
-        border="0">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
+        alt="cute-icon-thumbnail" border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!-- nav -->
+    <nav class="nav-link fixed-nav header" id="NavBar">
+        <div class="flex">
+            <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
+            <ul class="link btns_more">
+                <li><a href="..//index.html#projects"> All projects</a>\</li>
+                <li> <a href="carepass-dashboard.html"> Membership dashboard redesign </a> \</li>
+                <li> <a href="about.html"> About Chiara </a> </li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="content-container-project">
         <header class="header-project">
             <h1> Filtering information when shopping </h1>
         </header>
-
-
-        <nav class="nav-link fixed-nav header" id="NavBar">
-            <div class="flex">
- <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
-                <ul class="link btns_more">
-                    <li><a href="projects.html"> All projects </a>\</li> 
-                 <li> <a href="carepass-dashboard.html"> Membership dashboard redesign </a> \</li>  
-                 <li> <a href="about.html"> About Chiara </a> </li>   
-                </ul>
-            </div>
-        </nav>
 
         <!-- Information about the project -->
         <div class="project-information-container">
@@ -66,67 +65,95 @@
 
         <!-- Context about the project -->
         <div class="background-color">
-            <h2 class="large-text">Context</h2>
-                <div class="context">
-   <p>
-     Filtering is a huge part of the shopping experience.               
-    To increase users' activity for the filtering feature of the shopping
-                    experience, precisely the product list page. However, it did evolve to look at the enterprise's filtering
-                    experience, find ways to make the feature consistent, and
-                    introduce horizontal filters.
-                </p>
+            <div class="context">
+                <div class="context-text">
+                    <h2 class="large-text">Context</h2>
 
 
-                <img src="https://i.ibb.co/zh5VLdk/other-methods-to-filter-and-sort.png" alt="other-methods-to-filter-and-sort" border="0">                </div>
-    </div>
-     
+                    <p>
+                        Filtering is a huge part of the shopping experience.
+                        To increase users' activity for the filtering feature of the shopping
+                        experience, precisely the product list page. However, it did evolve to look at the enterprise's
+                        filtering
+                        experience, find ways to make the feature consistent, and
+                        introduce horizontal filters.
+                    </p>
 
-                <div class="project-conext-container dp-containter">
-                    <h2>Design Process </h2>
-                    <h3> Rinse and repeat </h3>
-                    <div class="wrap">
-                        <div class="">
-                            <img src="https://i.ibb.co/M9kmjMd/Discovery-t.png" alt="Discovery" border="0"
-                                style="width: 150px; height: auto;">
-                            <h3> Discovery: </h3>
-                            <ul class="cute-bullets">
-                                <li> Competitive analysis </li>
-                                <li> Desk research </li>
-                            </ul>
-                        </div>
 
-                        <div class="">
-                            <img src="https://i.ibb.co/hDhmvFq/ideate-t.png" alt="Ideate" border="0"
-                                style="width: 150px; height: auto;">
-                            <h3> Ideate: </h3>
-                            <ul class="cute-bullets">
-                                <li> Wireframes </li>
-                                <li> Mid-fidelity prototype </li>
-                                <li> High fidelity prototype </li>
-                            </ul>
-                        </div>
+                    <img src="https://i.ibb.co/zh5VLdk/other-methods-to-filter-and-sort.png"
+                        alt="other-methods-to-filter-and-sort" border="0">
+                </div>
+            </div>
+        </div>
 
-                        <div class="">
 
-                            <img src="https://i.ibb.co/Gd16L5y/testing-t.png" alt="Testing" border="0"
-                                style="width: 150px; height: auto;">
-                            <h3> Testing: </h3>
-                            <ul class="cute-bullets">
-                                <li> Unmoderated user testing </li>
-                            </ul>
-                        </div>
-                    </div>
+        <div class="project-conext-container dp-containter">
+            <h2>Design Process </h2>
+            <h3> Rinse and repeat </h3>
+            <div class="dp-flex">
+                <div class="process">
+
+                    <img src="https://i.ibb.co/M9kmjMd/Discovery-t.png" alt="Discovery" border="0"
+                        style="width: 150px; height: auto;">
+                    <h3> Discovery: </h3>
+                    <ul class="cute-bullets">
+                        <li><a href="#competitive"> Competitive analysis </a> </li>
+                        <li><a href="#desk"> UX analysis </a></li>
+                    </ul>
                 </div>
 
-                <div class="project-conext-container">
-                <div class="">
-                    <h2 class="">User problems </h2>
-                    <p class="para-img"> 
-                        People were not using filters throughout the CVS experience. Some feedback was gathered and
-                        users want a simple way to filter information. We sought to see how we can make the experience
-                        feel less overwhelming.
-                    </p>
-                    <!-- <h3> Short term project </h3>
+                <div class="process">
+                    <img src="https://i.ibb.co/hDhmvFq/ideate-t.png" alt="Ideate" border="0"
+                        style="width: 150px; height: auto;">
+                    <h3> Ideate: </h3>
+                    <ul class="cute-bullets">
+                        <li> <a href="#wireframes"> Wireframes </a></li>
+                        <li> Mid-fidelity prototype </li>
+                        <li> <a href="hifi"> High fidelity prototype </a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="dp-flex">
+                <div class="process">
+
+                    <img src="https://i.ibb.co/Gd16L5y/testing-t.png" alt="Testing" border="0"
+                        style="width: 150px; height: auto;">
+                    <h3> Testing: </h3>
+                    <ul class="cute-bullets">
+                        <li> Unmoderated user testing </li>
+                    </ul>
+                </div>
+                <div class="process">
+                    <h3> Takeaways: </h3>
+                    <ul class="cute-bullets">
+                        <li> <a href="#take"> Takeaways </a></li>
+                        <li><a href="#next"> Next steps? </a></li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <nav class="nav-link fixed-nav header" id="NavBar">
+            <div class="flex">
+                <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
+                <ul class="link btns_more">
+                    <li><a href="#competitive"> Competitive analysis </a>\ </li>
+                    <li><a href="#desk"> UX analysis </a>\</li>
+                    <li> <a href="#wireframes"> Wireframes </a>\</li>
+                      <li> <a href="#take"> Takeaways </a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="project-conext-container">
+            <div class="">
+                <h2 class="">User problems </h2>
+                <p class="para-img">
+                    People were not using filters throughout the CVS experience. Some feedback was gathered and
+                    users want a simple way to filter information. We sought to see how we can make the experience
+                    feel less overwhelming.
+                </p>
+                <!-- <h3> Short term project </h3>
                     <ul class="cute-bullets">
                     <li> Make specific features accessible by exposing a subset of information people look for the most.
                     </li>
@@ -138,43 +165,44 @@
                     </li>
                     <li> Introduce new components for a design system.</li>
                     </ul> -->
-                </div>
+            </div>
 
-                <h3 class="">Initial goal </h3>
+            <h3 class="">Initial goal </h3>
+
+            <ul class="cute-bullets">
+
+                <li> Determine why and where users were not using the filtering experience and create solutions.
+                </li>
+                <li> Ensuring the experience is native to each platform.</li>
+                <li> Make global components and elements for the enterprise. </li>
+            </ul>
+
+            <h2 id="desk"> UX Analysis </h2>
+            <div>
+                <p>
+                    Our analytics show that less than 10% of the users used the filters on the product list page and
+                    the loyalty sections. With the information gathered from a usability test in April 2021, the
+                    following was called out:
+
+                </p>
 
                 <ul class="cute-bullets">
 
-                    <li> Determine why and where users were not using the filtering experience and create solutions.
-                    </li>
-                    <li> Ensuring the experience is native to each platform.</li>
-                    <li> Make global components and elements for the enterprise. </li>
+                    <li> The repeating or too much information. </li>
+                    <li> A lot of filters did not connect to what a person was looking for.</li>
+                    <li> There is no ability to search through the filter. </li>
+                    <li> Difficult to Navigate - specific on web mobile, iOS, and aOS. </li>
                 </ul>
-
-                <h3> Desk research </h3>
-                <div>
-                    <p>
-                        Our analytics show that less than 10% of the users used the filters on the product list page and
-                        the loyalty sections. With the information gathered from a usability test in April 2021, the
-                        following was called out:
-
-                    </p>
-
-                    <ul class="cute-bullets">
-
-                        <li> The repeating or too much information. </li>
-                        <li> A lot of filters did not connect to what a person was looking for.</li>
-                        <li> There is no ability to search through the filter. </li>
-                        <li> Difficult to Navigate - specific on web mobile, iOS, and aOS. </li>
-                    </ul>
-                    <img src="https://i.ibb.co/DQDTWDv/Current-PLP-filter-experience-for-app.png" alt="Current-PLP-filter-experience-for-app" border="0">
-                    <h3> Competitive analysis </h3> 
-                    <img src="https://i.ibb.co/TMrVNm7/Table.png" alt="Table" border="0">
-                </div>
-
-           
+                <img src="https://i.ibb.co/DQDTWDv/Current-PLP-filter-experience-for-app.png"
+                    alt="Current-PLP-filter-experience-for-app" border="0">
+                <h2 id="competitive"> Competitive analysis </h2>
+                <img src="https://i.ibb.co/TMrVNm7/Table.png" alt="Table" border="0">
+            </div>
 
 
-            <h2>Wireframes</h2>
+
+
+            <h2 id="wireframes">Wireframes</h2>
             <!-- <p>
                 With the information that was gathered from the user testing  - This phrase is redundant because it is
                 already implied that the information being discussed was gathered from user testing, as mentioned in the
@@ -191,7 +219,7 @@
             </div>
 
 
-            <h2> High-fidelity prototypes </h2>
+            <h2 id="hi-fi"> High-fidelity prototypes </h2>
             <div>
                 <p>
                     I used user testing and competitive analysis to implement Pill for iOS and chips for aOS. I worked
@@ -207,11 +235,11 @@
                     alt="Screenshot-2024-01-27-at-8-48-59-PM" border="0">
                 <img src="https://i.ibb.co/whtH4ZG/Screenshot-2024-01-27-at-8-39-39-PM.png"
                     alt="Screenshot-2024-01-27-at-8-39-39-PM" border="0">
-</div>
+            </div>
 
 
             <div class="background-color">
-                <h2> Handoff </h2>
+                <h2 id="handoff"> Handoff </h2>
                 <p>
                     For the developer's files:
                 </p>
@@ -223,13 +251,16 @@
                     <li> Interaction notes </li>
                     <li> List of Components, existing elements, and new elements</li>
                 </ul>
-                <img src="https://i.ibb.co/rxFSpRV/i-OS-components-filter.png" alt="i-OS-components-filter handoff" border="0">
+                <img src="https://i.ibb.co/rxFSpRV/i-OS-components-filter.png" alt="i-OS-components-filter handoff"
+                    border="0">
             </div>
 
-            <h2> Takeaways </h2>
+            <h2 id="take"> Takeaways </h2>
             <h3> Did we answer our questions? </h3>
             <p>
-                We did learn some of the reasons why customers were not using the filtering experience. Using expose filters for certain categories will help with finding quick information. However, the main filter needs a clean-up and UI adjustments so the feature works for different platforms. 
+                We did learn some of the reasons why customers were not using the filtering experience. Using expose
+                filters for certain categories will help with finding quick information. However, the main filter needs
+                a clean-up and UI adjustments so the feature works for different platforms.
 
             <h3> Did we achieve our goals? </h3>
             <p>
@@ -237,7 +268,7 @@
                 touching the current experience. </p>
 
 
-            <h3> Next steps? </h3>
+            <h3 id="next"> Next steps? </h3>
             <ul class="cute-bullets">
 
                 <li> Meet weekly with teams that had a filter experience. </li>
@@ -250,38 +281,45 @@
 
             </ul>
 
-            <p>
-
-
-
-            </div>
         </div>
     </div>
-</div>
     </div>
+    </div>
+    </div>
+
+
+    <nav class="nav-link fixed-nav header" id="NavBar">
+        <div class="flex">
+            <ul class="link btns_more">
+                <li><a href="..//index.html#projects"> All projects</a>\</li>
+                <li> <a href="carepass-dashboard.html"> Membership dashboard redesign </a> \</li>
+                <li> <a href="about.html"> About Chiara </a> </li>
+            </ul>
+        </div>
+    </nav>
 
     <footer class="footer-container">
         <div class="footer-content">
             <h2> Connect with me </h2>
             <nav class="">
                 <ul class="social-links">
-                    <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin" 
-                            rel="noopener noreferrer" target="_blank" class="fa fa-linkedin">   </a>
+                    <li> <a href="https://www.linkedin.com/in/chiara-boisaubin" aria-label="linkedin"
+                            rel="noopener noreferrer" target="_blank" class="fa fa-linkedin"> </a>
                     </li>
-                    <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance" 
-                            rel="noopener noreferrer" target="_blank" class="fa fa-behance">    </a>
+                    <li> <a href="https://www.behance.net/chiaraboisaubin" aria-label="behance"
+                            rel="noopener noreferrer" target="_blank" class="fa fa-behance"> </a>
                     </li>
-                    <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram" 
-                            rel="noopener noreferrer" target="_blank" class="fa fa-instagram">  </a> </li>
+                    <li> <a href="https://www.instagram.com/chiara_boisaubin" aria-label="instagram"
+                            rel="noopener noreferrer" target="_blank" class="fa fa-instagram"> </a> </li>
 
-                    <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" 
-                        rel="noopener noreferrer" target="_blank" class="fa fa-calendar"> </a> </li>
+                    <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
+                            target="_blank" class="fa fa-calendar"> </a> </li>
 
-                    <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email"  rel="noopener noreferrer"
-                            target="_blank" class="fa fa-envelope">  </a>  </li>
+                    <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
+                            target="_blank" class="fa fa-envelope"> </a> </li>
 
-                      <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
-                                    target="_blank" class="fa fa-github">  </a>  </li>
+                    <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
+                            target="_blank" class="fa fa-github"> </a> </li>
                 </ul>
             </nav>
             <small class="copy"> © 2024 Designed and Coded by Chiara BoisAubin </small>
@@ -293,10 +331,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VYYM7P4JE6"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-VYYM7P4JE6');
+    gtag('config', 'G-VYYM7P4JE6');
 </script>
+
 </html>
