--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -5,8 +5,8 @@
     <title> Making a tattoo appointment </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content=" Chiara's portfolio"/>
-    <meta property="og:image" content="https://i.ibb.co/YLpj3jc/Ink-Tank-into.png/>
-    <meta property="og:description" content=" Making a tattoo appointment"/>
+    <meta property="og:image" content="https://i.ibb.co/YLpj3jc/Ink-Tank-into.png"/>
+    <meta property="og:description" content="Making a tattoo appointment"/>
     <meta property="og:url" content="https://chiaraboisaubin.com/ink-tank.html"/>
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627"/>
@@ -35,7 +35,7 @@
  <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
         
             <ul class="link btns_more">
-                <li><a href="projects.html"> All projects </a>\</li>
+             <li><a href="..//index.html#projects"> All projects</a>\</li>
              <li>  <a href="chowdown.html"> Reservation seats and order at restaurants online </a>\</li>
              <li>  <a href="about.html"> About Chiara </a> </li>
             </ul>
