--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -37,7 +37,7 @@
  <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
 
                 <ul class="link btns_more">
-                    <li><a href="projects.html"> All projects</a>\</li>
+                <li><a href="..//index.html#projects"> All projects</a>\</li>
                 <li><a href="ink-tank.html"> Making a tattoo appointment </a>\</li>
                  <l1>   <a href="about.html"> About Chiara </a> </l1> 
                 </ul>
