--- a/pages/mare-web-design.html
+++ b/pages/mare-web-design.html
@@ -35,7 +35,7 @@
             <h1> Chiara BoisAubin</h1>
         
             <ul class="link btns_more">
-                <li><a href="projects.html"> Projects </a></li>
+             <li><a href="..//index.html#projects"> All projects</a>\</li>
                 <a href="expose-filter.html"> Next project </a> 
             </ul>
         </div>
